Refactor UI components for improved readability and consistency
- Updated Input component for better prop handling and styling.
- Refactored Modal component to streamline structure and enhance accessibility.
- Improved ProgressBar component with clearer class management.
- Enhanced Table component for better sorting and filtering functionality.
- Cleaned up ThemeToggle component for consistency.
- Modified CSS variables for better color management and consistency.
- Adjusted main.tsx for proper rendering structure.
- Refined Holdings, Portfolio, and Rebalancing pages for improved layout and readability.
- Updated portfolioStore for better state management and clarity.
- Enhanced calculations utility for better performance metrics.
- Improved data transformation logic for CSV parsing.
- Cleaned up Tailwind CSS configuration for better readability.
- Ensured TypeScript configuration files are properly formatted.
- Updated Vite configuration for consistency.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     {
       "file": ".github/instructions/copilot-commit-message-instructions.md"
     }
-  ]
+  ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
